--- a/index.html
+++ b/index.html
@@ -20,32 +20,19 @@
                         <h2 class="card-title text-center">Formulario de Registro</h2>
                         <form>
                             <div class="mb-3">
-                                <label for="name" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="name" placeholder="Introduce tu nombre">
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Correo Electrónico</label>
-                                <input type="email" class="form-control" id="email" placeholder="Introduce tu correo electrónico">
+                                <label for="name" class="form-label">Usuario</label>
+                                <input type="text" class="form-control" id="usuario" placeholder="Introduce tu usuario">
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Contraseña</label>
                                 <input type="password" class="form-control" id="password" placeholder="Introduce tu contraseña">
                             </div>
-                            <div class="mb-3">
-                                <label for="gender" class="form-label">Género</label>
-                                <select class="form-select" id="gender">
-                                    <option selected>Selecciona tu género</option>
-                                    <option value="male">Masculino</option>
-                                    <option value="female">Femenino</option>
-                                    <option value="other">Otro</option>
-                                </select>
-                            </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="terms">
-                                <label class="form-check-label" for="terms">Acepto los términos y condiciones</label>
+                                <label class="form-check-label" for="terms">Recuerdame</label>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
+                                <button type="button" class="btn btn-primary" onclick="validarUsuario()">Enviar</button>
                             </div>
                         </form>
                     </div>
@@ -54,8 +41,24 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+
+        function validarUsuario(){
+            var name = document.getElementById('usuario').value;
+            var password = document.getElementById('password').value;   
+
+            if(name=="samir" && password=="1234"){
+                window.location.href = "catalogo.html";
+                alert("Bienvenido");
+            }else{
+                alert("Usuario o contraseña incorrectos");
+            }
+        }
+
+    </script>
+
+
+
 </body>
 
 </html>
